# mini-django

./: LICENSE  README.md  manage.py  pyproject.toml
